# iso-27001-ai-mcp

./: .cursorrules  .mcp.json  Dockerfile  README.md  acp.json  glama.json  llms.txt  package.json  pyproject.toml  server.json  server.py  smithery.yaml
.github/workflows/: compliance-pdca.yml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
.well-known/mcp/: server-card.json
tests/: test_functional.py
